# H264Coder

./: .gitignore  CMakeLists.txt
src/: AnnexBReader.cpp  AnnexBReader.h  BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  CMakeLists.txt  EBSP.cpp  EBSP.h  Nalu.cpp  Nalu.h  ParameterSet.cpp  ParameterSet.h  RBSP.cpp  RBSP.h  Slice.cpp  Slice.h  VideoParameters.h  defines.h  typedefs.h
test/: CMakeLists.txt  test.cpp  test_config.h.in
